fix: channel button color on dark mode

--- a/src/renderer/scss/themes/_dark.scss
+++ b/src/renderer/scss/themes/_dark.scss
@@ -121,10 +121,6 @@ html[data-theme='dark'] {
     background-color: rgba($lbry-black, 0.7);
   }
 
-  .btn {
-    color: $lbry-gray-3;
-  }
-
   .modal {
     background-color: rgba($lbry-black, 0.9);
     border: 1px solid rgba($lbry-gray-1, 0.1);
